EDA conclusions extended

--- a/notebooks/01_eda.ipynb
+++ b/notebooks/01_eda.ipynb
@@ -2189,6 +2189,7 @@
     "**Data Quality and Structure:**\n",
     "- There are 3 categories and 1059 SKUs: each (date, sku_id) combination appears at most once: no duplicate sales records per day per SKU.\n",
     "- Most SKUs are highly sparse, with a median of only 64 days of recorded sales (out of 1,420+ possible), while a few \"core\" SKUs are present almost daily.\n",
+    "- **No data for September 2019 – we don't know if is problem with dataset, or shop was closed.**\n",
     "\n",
     "\n",
     "**Univariate Distributions:**\n",
@@ -2210,6 +2211,12 @@
     "- Most SKUs have stable prices within a year (max/min ratio usually <1.5), with few outliers.\n",
     "- Top SKUs have weak correlation."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd10f3ab",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
