Full Data Grid; Preparation and Features to .py

--- a/notebooks/01_eda.ipynb
+++ b/notebooks/01_eda.ipynb
@@ -422,6 +422,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2dd65e0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Different categories for same SKU?\n",
+    "df.groupby(\"sku_id\").category_id.nunique().sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "id": "50a080f9",
    "metadata": {},
@@ -2211,12 +2222,6 @@
     "- Most SKUs have stable prices within a year (max/min ratio usually <1.5), with few outliers.\n",
     "- Top SKUs have weak correlation."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dd10f3ab",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
