Model rerun output

--- a/notebooks/02_model.ipynb
+++ b/notebooks/02_model.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "dc658043",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
        "(226486, 5)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "cd48709b",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "69f93da2",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
        "(1529196, 6)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "18cef7a5",
    "metadata": {},
    "outputs": [
@@ -388,7 +388,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "255ed514",
    "metadata": {},
    "outputs": [
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "2a4522e4",
    "metadata": {},
    "outputs": [],
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "f45dd7d1",
    "metadata": {},
    "outputs": [],
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "4fee9226",
    "metadata": {},
    "outputs": [],
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "82508e6e",
    "metadata": {},
    "outputs": [],
@@ -603,32 +603,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "cea58e4b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'sku_mean'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Library/Caches/pypoetry/virtualenvs/forecast-sales-IUy_ksx--py3.12/lib/python3.12/site-packages/pandas/core/indexes/base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3811\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:196\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7096\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
-      "\u001b[31mKeyError\u001b[39m: 'sku_mean'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[28]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      1\u001b[39m sku_mean = train.groupby(\u001b[33m'\u001b[39m\u001b[33msku_id\u001b[39m\u001b[33m'\u001b[39m)[\u001b[33m'\u001b[39m\u001b[33msales_quantity\u001b[39m\u001b[33m'\u001b[39m] \\\n\u001b[32m      2\u001b[39m                 .mean() \\\n\u001b[32m      3\u001b[39m                 .rename(\u001b[33m'\u001b[39m\u001b[33msku_mean\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      5\u001b[39m df = df.merge(sku_mean, on=\u001b[33m'\u001b[39m\u001b[33msku_id\u001b[39m\u001b[33m'\u001b[39m, how=\u001b[33m'\u001b[39m\u001b[33mleft\u001b[39m\u001b[33m'\u001b[39m) \u001b[38;5;66;03m# For next steps\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m df[\u001b[33m'\u001b[39m\u001b[33msku_mean\u001b[39m\u001b[33m'\u001b[39m] = \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43msku_mean\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m.fillna(\u001b[32m0\u001b[39m)\n\u001b[32m      8\u001b[39m train = train.merge(sku_mean, on=\u001b[33m'\u001b[39m\u001b[33msku_id\u001b[39m\u001b[33m'\u001b[39m, how=\u001b[33m'\u001b[39m\u001b[33mleft\u001b[39m\u001b[33m'\u001b[39m) \u001b[38;5;66;03m# For next steps\u001b[39;00m\n\u001b[32m      9\u001b[39m train[\u001b[33m'\u001b[39m\u001b[33msku_mean\u001b[39m\u001b[33m'\u001b[39m] = train[\u001b[33m'\u001b[39m\u001b[33msku_mean\u001b[39m\u001b[33m'\u001b[39m].fillna(\u001b[32m0\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Library/Caches/pypoetry/virtualenvs/forecast-sales-IUy_ksx--py3.12/lib/python3.12/site-packages/pandas/core/frame.py:4107\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4105\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4106\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4107\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4108\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4109\u001b[39m     indexer = [indexer]\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/Library/Caches/pypoetry/virtualenvs/forecast-sales-IUy_ksx--py3.12/lib/python3.12/site-packages/pandas/core/indexes/base.py:3819\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3814\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3815\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3816\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3817\u001b[39m     ):\n\u001b[32m   3818\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3819\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3820\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3821\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3822\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3823\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3824\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
-      "\u001b[31mKeyError\u001b[39m: 'sku_mean'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sku_mean = train.groupby('sku_id')['sales_quantity'] \\\n",
     "                .mean() \\\n",
@@ -646,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "d65f0195",
    "metadata": {},
    "outputs": [
@@ -675,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "109d16a6",
    "metadata": {},
    "outputs": [
@@ -683,18 +661,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:\tlearn: 204.0614719\ttest: 15.9623055\tbest: 15.9623055 (0)\ttotal: 72.1ms\tremaining: 21.6s\n",
-      "50:\tlearn: 136.9210838\ttest: 11.3783145\tbest: 11.3783145 (50)\ttotal: 456ms\tremaining: 2.23s\n",
-      "100:\tlearn: 101.2349673\ttest: 9.5586103\tbest: 9.5586103 (100)\ttotal: 813ms\tremaining: 1.6s\n",
-      "150:\tlearn: 84.1340903\ttest: 9.1264650\tbest: 9.1264650 (150)\ttotal: 1.23s\tremaining: 1.21s\n",
-      "200:\tlearn: 76.6818679\ttest: 9.1739435\tbest: 9.1049467 (167)\ttotal: 1.59s\tremaining: 785ms\n",
+      "0:\tlearn: 79.4749920\ttest: 4.5280836\tbest: 4.5280836 (0)\ttotal: 154ms\tremaining: 46s\n",
+      "50:\tlearn: 79.4745839\ttest: 4.5349296\tbest: 4.5280836 (0)\ttotal: 2.75s\tremaining: 13.4s\n",
       "Stopped by overfitting detector  (50 iterations wait)\n",
       "\n",
-      "bestTest = 9.104946659\n",
-      "bestIteration = 167\n",
+      "bestTest = 4.52808362\n",
+      "bestIteration = 0\n",
       "\n",
-      "Shrink model to first 168 iterations.\n",
-      "Dummy CatBoost MAE: 4.923\n"
+      "Shrink model to first 1 iterations.\n",
+      "Dummy CatBoost MAE: 2.904\n"
      ]
     }
    ],
@@ -732,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "61c31f89",
    "metadata": {},
    "outputs": [
@@ -740,22 +715,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:\tlearn: 196.5268951\ttest: 15.4027708\tbest: 15.4027708 (0)\ttotal: 21.5ms\tremaining: 10.7s\n",
-      "50:\tlearn: 55.9760347\ttest: 7.6966445\tbest: 7.6934106 (49)\ttotal: 892ms\tremaining: 7.85s\n",
-      "100:\tlearn: 50.0556349\ttest: 7.1338949\tbest: 7.1338949 (100)\ttotal: 1.87s\tremaining: 7.38s\n",
-      "150:\tlearn: 47.6353468\ttest: 6.7440433\tbest: 6.7376364 (141)\ttotal: 2.85s\tremaining: 6.58s\n",
-      "200:\tlearn: 45.5044069\ttest: 6.5826828\tbest: 6.5824326 (198)\ttotal: 3.89s\tremaining: 5.78s\n",
-      "250:\tlearn: 43.6914806\ttest: 6.5364573\tbest: 6.5354063 (237)\ttotal: 4.84s\tremaining: 4.8s\n",
-      "300:\tlearn: 42.5765194\ttest: 6.4593000\tbest: 6.4572052 (285)\ttotal: 5.77s\tremaining: 3.81s\n",
-      "350:\tlearn: 41.4892256\ttest: 6.4641912\tbest: 6.4469409 (348)\ttotal: 6.67s\tremaining: 2.83s\n",
-      "400:\tlearn: 40.5001375\ttest: 6.4022068\tbest: 6.4020295 (390)\ttotal: 7.66s\tremaining: 1.89s\n",
-      "450:\tlearn: 39.6119025\ttest: 6.3584105\tbest: 6.3583923 (448)\ttotal: 8.59s\tremaining: 933ms\n",
-      "499:\tlearn: 38.8037863\ttest: 6.2973773\tbest: 6.2973773 (499)\ttotal: 9.48s\tremaining: 0us\n",
+      "0:\tlearn: 75.9137154\ttest: 4.3933733\tbest: 4.3933733 (0)\ttotal: 176ms\tremaining: 1m 27s\n",
+      "50:\tlearn: 22.7593421\ttest: 4.9077418\tbest: 3.4213240 (9)\ttotal: 6.51s\tremaining: 57.3s\n",
+      "Stopped by overfitting detector  (50 iterations wait)\n",
       "\n",
-      "bestTest = 6.297377251\n",
-      "bestIteration = 499\n",
+      "bestTest = 3.421324044\n",
+      "bestIteration = 9\n",
       "\n",
-      "Full CatBoost MAE with extra features: 2.912\n",
+      "Shrink model to first 10 iterations.\n",
+      "Full CatBoost MAE with extra features: 2.009\n",
       "\n"
      ]
     }
@@ -784,14 +752,6 @@
     "mae_full   = mean_absolute_error(y_test, y_pred_full)\n",
     "print(f\"Full CatBoost MAE with extra features: {mae_full:.3f}\\n\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "caf95c98",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
