Numeric features were updated: rolling means

--- a/notebooks/02_model.ipynb
+++ b/notebooks/02_model.ipynb
@@ -12,7 +12,7 @@
     "from sklearn.metrics import mean_absolute_error\n",
     "\n",
     "from forecast_sales.data_utils import create_full_dataset\n",
-    "from forecast_sales.features import mark_holiday_adjacent, add_date_categorical_features"
+    "from forecast_sales.features import mark_holiday_adjacent, add_date_categorical_features, add_rolling_mean_features"
    ]
   },
   {
@@ -267,6 +267,14 @@
    "metadata": {},
    "source": [
     "# 2 Feature engineering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a723122",
+   "metadata": {},
+   "source": [
+    "## 2.1 Categorical"
    ]
   },
   {
@@ -548,6 +556,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ce37dd95",
+   "metadata": {},
+   "source": [
+    "## 2.2 Numeric"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "f45dd7d1",
@@ -560,17 +576,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "4fee9226",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sku_id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>category_id</th>\n",
+       "      <th>sales_price</th>\n",
+       "      <th>sales_quantity</th>\n",
+       "      <th>added</th>\n",
+       "      <th>is_holiday_or_adjacent</th>\n",
+       "      <th>dayofweek</th>\n",
+       "      <th>month</th>\n",
+       "      <th>quarter</th>\n",
+       "      <th>sales_quantity_roll7_mean</th>\n",
+       "      <th>sales_quantity_roll14_mean</th>\n",
+       "      <th>sales_quantity_roll28_mean</th>\n",
+       "      <th>sales_quantity_roll56_mean</th>\n",
+       "      <th>sales_price_roll7_mean</th>\n",
+       "      <th>sales_price_roll14_mean</th>\n",
+       "      <th>sales_price_roll28_mean</th>\n",
+       "      <th>sales_price_roll56_mean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>631</th>\n",
+       "      <td>1045</td>\n",
+       "      <td>2016-11-18</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>253.500</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4</td>\n",
+       "      <td>11</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>648</th>\n",
+       "      <td>8620</td>\n",
+       "      <td>2016-11-18</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>32.500</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4</td>\n",
+       "      <td>11</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>411</th>\n",
+       "      <td>642939</td>\n",
+       "      <td>2016-11-18</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>648.700</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4</td>\n",
+       "      <td>11</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>244</th>\n",
+       "      <td>544804</td>\n",
+       "      <td>2016-11-18</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>32.760</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4</td>\n",
+       "      <td>11</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>454</th>\n",
+       "      <td>685105</td>\n",
+       "      <td>2016-11-18</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>27.066</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>4</td>\n",
+       "      <td>11</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     sku_id       date  category_id  sales_price  sales_quantity  added  \\\n",
+       "631    1045 2016-11-18          7.0      253.500             0.0   True   \n",
+       "648    8620 2016-11-18         17.0       32.500             2.0  False   \n",
+       "411  642939 2016-11-18          7.0      648.700             0.0   True   \n",
+       "244  544804 2016-11-18         17.0       32.760             2.0  False   \n",
+       "454  685105 2016-11-18         17.0       27.066             0.0   True   \n",
+       "\n",
+       "     is_holiday_or_adjacent dayofweek month quarter  \\\n",
+       "631                   False         4    11       4   \n",
+       "648                   False         4    11       4   \n",
+       "411                   False         4    11       4   \n",
+       "244                   False         4    11       4   \n",
+       "454                   False         4    11       4   \n",
+       "\n",
+       "     sales_quantity_roll7_mean  sales_quantity_roll14_mean  \\\n",
+       "631                        NaN                         NaN   \n",
+       "648                        NaN                         NaN   \n",
+       "411                        NaN                         NaN   \n",
+       "244                        NaN                         NaN   \n",
+       "454                        NaN                         NaN   \n",
+       "\n",
+       "     sales_quantity_roll28_mean  sales_quantity_roll56_mean  \\\n",
+       "631                         NaN                         NaN   \n",
+       "648                         NaN                         NaN   \n",
+       "411                         NaN                         NaN   \n",
+       "244                         NaN                         NaN   \n",
+       "454                         NaN                         NaN   \n",
+       "\n",
+       "     sales_price_roll7_mean  sales_price_roll14_mean  sales_price_roll28_mean  \\\n",
+       "631                     NaN                      NaN                      NaN   \n",
+       "648                     NaN                      NaN                      NaN   \n",
+       "411                     NaN                      NaN                      NaN   \n",
+       "244                     NaN                      NaN                      NaN   \n",
+       "454                     NaN                      NaN                      NaN   \n",
+       "\n",
+       "     sales_price_roll56_mean  \n",
+       "631                      NaN  \n",
+       "648                      NaN  \n",
+       "411                      NaN  \n",
+       "244                      NaN  \n",
+       "454                      NaN  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Lags & rolling stats (per SKU): will be moved to function\n",
-    "df = df.sort_values(['sku_id','date'])\n",
-    "grp = df.groupby('sku_id')['sales_quantity']\n",
-    "df['lag_1']      = grp.shift(14).fillna(0)\n",
-    "df['lag_7']      = grp.shift(28).fillna(0)\n",
-    "df['roll7_mean'] = grp.shift(1).rolling(14, min_periods=1).mean().fillna(0)"
+    "# Additional Numeric Features\n",
+    "df, rolling_feature_names = add_rolling_mean_features(df, days=[7, 14, 28, 56, 112, 500, 1000], columns=['sales_quantity', 'sales_price'])\n",
+    "\n",
+    "display(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e6e8f214",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sku_mean',\n",
+       " 'sales_price',\n",
+       " 'sales_quantity_roll7_mean',\n",
+       " 'sales_quantity_roll14_mean',\n",
+       " 'sales_quantity_roll28_mean',\n",
+       " 'sales_quantity_roll56_mean',\n",
+       " 'sales_price_roll7_mean',\n",
+       " 'sales_price_roll14_mean',\n",
+       " 'sales_price_roll28_mean',\n",
+       " 'sales_price_roll56_mean']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_features = ['sku_mean', 'sales_price'] + rolling_feature_names\n",
+    "num_features"
    ]
   },
   {
@@ -583,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "82508e6e",
    "metadata": {},
    "outputs": [],
@@ -595,15 +839,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e5131cac",
+   "metadata": {},
+   "source": [
+    "# 4 Simple Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2d49c073",
    "metadata": {},
    "source": [
-    "# 4 Baseline: historical mean"
+    "## 4.1 Baseline: historical mean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "cea58e4b",
    "metadata": {},
    "outputs": [],
@@ -624,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "d65f0195",
    "metadata": {},
    "outputs": [
@@ -648,12 +900,12 @@
    "id": "3006fcd4",
    "metadata": {},
    "source": [
-    "# 2 Dummy Catboost: only categorical features"
+    "# 5 Dummy Catboost: only categorical features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "109d16a6",
    "metadata": {},
    "outputs": [
@@ -661,11 +913,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:\tlearn: 79.4749920\ttest: 4.5280836\tbest: 4.5280836 (0)\ttotal: 154ms\tremaining: 46s\n",
-      "50:\tlearn: 79.4745839\ttest: 4.5349296\tbest: 4.5280836 (0)\ttotal: 2.75s\tremaining: 13.4s\n",
+      "0:\tlearn: 79.4749925\ttest: 4.5281657\tbest: 4.5281657 (0)\ttotal: 159ms\tremaining: 47.4s\n",
+      "50:\tlearn: 79.4746978\ttest: 4.5352542\tbest: 4.5281657 (0)\ttotal: 2.65s\tremaining: 13s\n",
       "Stopped by overfitting detector  (50 iterations wait)\n",
       "\n",
-      "bestTest = 4.52808362\n",
+      "bestTest = 4.528165714\n",
       "bestIteration = 0\n",
       "\n",
       "Shrink model to first 1 iterations.\n",
@@ -702,12 +954,12 @@
    "id": "14777d9b",
    "metadata": {},
    "source": [
-    "### 3 Catboost with numeric features"
+    "# 3 Catboost with numeric features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "61c31f89",
    "metadata": {},
    "outputs": [
@@ -715,21 +967,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:\tlearn: 75.9137154\ttest: 4.3933733\tbest: 4.3933733 (0)\ttotal: 176ms\tremaining: 1m 27s\n",
-      "50:\tlearn: 22.7593421\ttest: 4.9077418\tbest: 3.4213240 (9)\ttotal: 6.51s\tremaining: 57.3s\n",
-      "Stopped by overfitting detector  (50 iterations wait)\n",
+      "0:\tlearn: 75.8853735\ttest: 4.4791549\tbest: 4.4791549 (0)\ttotal: 204ms\tremaining: 1m 41s\n",
+      "50:\tlearn: 21.5994162\ttest: 3.1340279\tbest: 3.1329717 (43)\ttotal: 6.74s\tremaining: 59.3s\n",
+      "100:\tlearn: 19.4244993\ttest: 2.4654407\tbest: 2.4654407 (100)\ttotal: 12.3s\tremaining: 48.4s\n",
+      "150:\tlearn: 18.7887767\ttest: 2.2184422\tbest: 2.2169313 (148)\ttotal: 18.4s\tremaining: 42.5s\n",
+      "200:\tlearn: 18.2151075\ttest: 2.1790442\tbest: 2.1790415 (198)\ttotal: 24.3s\tremaining: 36.1s\n",
+      "250:\tlearn: 17.7151154\ttest: 2.1693073\tbest: 2.1693022 (248)\ttotal: 29.9s\tremaining: 29.7s\n",
+      "300:\tlearn: 17.0407758\ttest: 2.1657157\tbest: 2.1657073 (291)\ttotal: 35.1s\tremaining: 23.2s\n",
+      "350:\tlearn: 16.6290154\ttest: 2.1657630\tbest: 2.1656925 (335)\ttotal: 40.5s\tremaining: 17.2s\n",
+      "400:\tlearn: 16.2518510\ttest: 2.1646057\tbest: 2.1645847 (397)\ttotal: 46s\tremaining: 11.4s\n",
+      "450:\tlearn: 15.9863672\ttest: 2.1645762\tbest: 2.1645591 (440)\ttotal: 50.4s\tremaining: 5.48s\n",
+      "499:\tlearn: 15.7295994\ttest: 2.1640624\tbest: 2.1640562 (498)\ttotal: 54.6s\tremaining: 0us\n",
       "\n",
-      "bestTest = 3.421324044\n",
-      "bestIteration = 9\n",
+      "bestTest = 2.164056182\n",
+      "bestIteration = 498\n",
       "\n",
-      "Shrink model to first 10 iterations.\n",
-      "Full CatBoost MAE with extra features: 2.009\n",
+      "Shrink model to first 499 iterations.\n",
+      "Full CatBoost MAE with extra features: 0.587\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "num_features = ['sku_mean','sales_price','lag_1','lag_7','roll7_mean']\n",
     "features_all = cat_features + num_features\n",
     "\n",
     "X_train, y_train = train[features_all], train['sales_quantity']\n",
